# Computer-Vision

./: .gitignore  README.md  pyproject.toml
analysis/: LLaMA_DERM_LoRA_1000_11B_test_100_open.json  LLaMA_DERM_LoRA_1000_11B_test_class_only.json  LLaMA_DERM_LoRA_5000_11B_test_1000_class_only.json  LLaMA_DERM_LoRA_5000_11B_test_open.json  LLaMA_DERM_LoRA_500_11B_test_1000_class_only.json  LLaMA_DERM_LoRA_500_11B_test_open.json  LLaMA_DERM_QLoRA_1000_11B_test_1000_class_only.json  LLaMA_DERM_QLoRA_1000_11B_test_100_open.json  LLaMA_DERM_QLoRA_2000_11B_test_class_only.json  LLaMA_DERM_QLoRA_2000_11B_test_open.json  LLaMA_DERM_QLoRA_5000_11B_test_100_open.json  LLaMA_DERM_QLoRA_5000_11B_test_class_only.json  LLaMA_DERM_QLoRA_500_11B_test_1000_class_only.json  LLaMA_DERM_QLoRA_500_11B_test_100_open.json  LLaMA_DERM_QLoRA_9500_11B_test_1000_class_only.json  LLaMA_DERM_QLoRA_9500_11B_test_1000_class_only_train.json  LLaMA_DERM_QLoRA_9500_11B_test_100_open.json  Llama-3.2-11B-Vision-Instruct_test_class_only.json  Llama-3.2-11B-Vision-Instruct_test_class_only_quantized.json  Llama-3.2-11B-Vision-Instruct_test_open.json  Llama-3.2-11B-Vision-Instruct_test_open_quantized.json
exported_notebooks/: fine_tune_lora_450.html  fine_tune_lora_5000.html  fine_tune_lora_900.html  fine_tune_qlora_1800.html  fine_tune_qlora_450.html  fine_tune_qlora_5000.html  fine_tune_qlora_900.html  fine_tune_qlora_9500.html
notebooks/: analyse.ipynb  analyze_tests.ipynb  analyze_trainings.ipynb  finte_tune.ipynb  lora_fine_tune.ipynb  lora_finte_tune.ipynb  qlora_fine_tune.ipynb  qlora_finte_tune.ipynb  (+1 more)
(+4 files in other folders)
