[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = ["Eric Fernandes Evaristo <ericfernandes7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
unsloth = "^2024.12.2"
huggingface-hub = "^0.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
